Smaller loader and fixed overflowed ingredient input for mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -89,7 +89,8 @@ body{
         position: relative;
         background: linear-gradient(to right bottom, var(--color-primary-2), var(--color-primary-3));
     }
-
+    width: 10rem;
+    height: 10rem;
     position: absolute;
     top: 50%;
     left: 50%;
