--- a/src/styles/components/_fileButton.scss
+++ b/src/styles/components/_fileButton.scss
@@ -18,12 +18,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        height: 80%;
-        width: 80%;
+        height: 50%;
+        width: 50%;
 
         &--greeting{
-            height: 50%;
-            width: 50%;
+            height: 25%;
+            width: 25%;
         }
     }
 
